implemented scheduling system for streamitems

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,7 +9,8 @@ html, body{
   padding: 0px 0px 0px 0px;
   //height:100%;
   .row{
-    margin:0;
+    margin-left: 0;
+    margin-right: 0;
     height:100%
   }
 }
