--- a/app/assets/stylesheets/streamitems.scss
+++ b/app/assets/stylesheets/streamitems.scss
@@ -10,3 +10,11 @@ li .active{
   border-bottom: 1px solid gray;
   margin-bottom: 5px;
 }
+#dateChooser{
+  border-bottom: 1px solid gray;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+}
+.table{
+  margin-top: 5px;
+}
