--- a/app/views/admin/streamitems/new.html.erb
+++ b/app/views/admin/streamitems/new.html.erb
@@ -8,9 +8,10 @@
    </div>
 <% end %>
 
-<div class = "well">
+<div class="container">
    <%= form_for @streamitem do |f| %>
-    <%= f.collection_select(:episode_id, Admin::Episode.all, :id, :name) %>
+    <div style="display: none;"><%= f.date_field :date, value: @selected_date.strftime('%Y-%m-%d') %></div>
+    <%= f.collection_select(:episode_id, Admin::Episode.all, :id, :name, {}, {:class=>'form-control'}) %>
     <%= f.submit "Add", class: "btn btn-primary" %>
    <% end %>
 </div>
