implemented progress bar for livestream

--- a/app/assets/stylesheets/streamitems.scss
+++ b/app/assets/stylesheets/streamitems.scss
@@ -18,3 +18,11 @@ li .active{
 .table{
   margin-top: 5px;
 }
+.progress{
+  height: 34px;
+  margin-bottom: 0px;
+}
+.progressText{
+  margin-top: 8px;
+  text-align: center;
+}
