about page almost fully styled

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,28 +26,32 @@
     </div>
   </div>
   <div class="fluid-container">
+    <!--ABOUT SECTION-->
     <div id="about" class="row main-section">
       <div class="row">
-        <h3 class="section-heading">About Us<h3>
+        <h2 class="section-heading">About Us<h2>
       </div>
       <div class="row section-body">
-        <div id="mission" class="panel <%= setCols(4)%>">
-          <div class="panel-heading"> Mission </div>
+        <div id="mission" class="about-item <%= setCols(4)%>">
+          <div class="img-circular"></div>
+          <div class="banner"><h4 class="banner-text">Mission</h4></div>
           <div class="panel-body">Image of some inspiring stuff</div>
         </div>
-        <div id="team" class="panel <%= setCols(4)%>">
-          <div class="panel-heading"> Team </div>
-          <div class="panel-body"> Image of our current team </div>
+        <div id="team" class="about-item <%= setCols(4)%>">
+          <div class="img-circular"></div>
+          <div class="banner"><h4 class="banner-text">Team</h4></div>
+          <div class=""> Image of our current team </div>
         </div>
-        <div id="goal" class="panel <%= setCols(4)%>">
-          <div class="panel-heading">Vision</div>
+        <div id="vision" class="about-item <%= setCols(4)%>">
+          <div class="img-circular"></div>
+          <div class="banner"><h4 class="banner-text">Vision</h4></div>
           <div class="panel-body"> Image of an eye or something majestic </div>
         </div>
       </div>
     </div>
     <div id="join" class="row main-section">
       <div class="row">
-        <h3 class="section-heading">Contact Us<h3>
+        <h2 class="section-heading">Contact Us<h2>
       </div>
       <div class="row section-body">
         This is a form to contact us with.
