--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,6 +20,42 @@
       }
     }
   }
+  .about-item{
+    position:relative;
+    .img-circular{
+      margin-left: auto;
+      margin-right: auto;
+      width:300px;
+      height:300px;
+      background-image: url(image_path("mic-logo-with-bg.png"));
+      background-position: center;
+      background-size:300px 300px;
+      background-repeat: no-repeat;
+      background-position: center;
+      border-radius: 50%;
+    }
+    .banner{
+      .banner-text{
+        color: #F6F7EA;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+      }
+      margin-left:auto;
+      margin-right:auto;
+      position: relative;
+      top:-20px;
+      width:50%;
+      min-width:300px;
+      height:100px;
+      background-image: url(image_path('red-banner.png'));
+      background-size:300px 75px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
 
   .main-section{
     padding:0px 100px 0px 100px;
