--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,6 +7,10 @@ html, body{
   position: relative;
   margin: 0;
   padding: 0;
+
+  h1,h2,h3,h4{
+    font-family: 'Oswald', serif;
+  }
 }
 
 #main-container{
@@ -14,9 +18,6 @@ html, body{
   padding: 0px 0px 0px 0px;
   position:relative;
   min-height:100%;
-  h1,h2,h3{
-    font-family: 'Oswald', serif;
-  }
   .row{
     margin-left: 0;
     margin-right: 0;
