--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,15 +21,14 @@
     }
   }
   .about-item{
-    position:relative;
     .img-circular{
       margin-left: auto;
       margin-right: auto;
-      width:300px;
-      height:300px;
+      width:250px;
+      height:250px;
       background-image: url(image_path("mic-logo-with-bg.png"));
       background-position: center;
-      background-size:300px 300px;
+      background-size:100% 100%;
       background-repeat: no-repeat;
       background-position: center;
       border-radius: 50%;
