added loop function for getCurrent (NOT WORKING)

--- a/app/views/admin/streamitems/index.html.erb
+++ b/app/views/admin/streamitems/index.html.erb
@@ -92,7 +92,7 @@
       <table class="table table-bordered table-striped">
          <thead>
             <tr>
-              <th class="col-md-2">Position</th>
+              <th class="col-md-2">Start Time</th>
               <th class="col-md-2">Name</th>
               <th class="col-md-6">Description</th>
               <th class="col-md-2">Actions</th>
