--- a/app/views/admin/streamitems/index.html.erb
+++ b/app/views/admin/streamitems/index.html.erb
@@ -42,6 +42,52 @@
           $("#day").change(function() {
             window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
           });
+          $( "#streamitems" ).sortable({
+            /*drop: function(event, ui) {
+              console.log(event.target);
+            },
+            receive: function(event, ui) {
+              console.log($(this).data().uiSortable.currentItem.prev());
+              console.log(event.target);
+            },*/
+            update: function(event, ui){
+              var oldPosition = $(ui.item[0]).attr('position');
+              var newPosition;
+              if($(ui.item[0]).prev()[0] === undefined){
+                newPosition = 1;
+              } else if(oldPosition > $(ui.item[0]).prev().attr('position')) {
+                newPosition = $(ui.item[0]).next().attr('position');
+              } else if(oldPosition < $(ui.item[0]).prev().attr('position')) {
+                newPosition = $(ui.item[0]).prev().attr('position');
+              }
+              console.log(oldPosition + " -> " + newPosition);
+
+
+              var streamItemsReorg = $("#streamitems").children();
+              var newPositionsArray = [];
+              for(var i = 0; i < streamItemsReorg.length; i++){
+                newPositionsArray.push($(streamItemsReorg[i]).attr('position'));
+              }
+              console.log(newPositionsArray);
+
+              var parameters = {
+                "old_positions[]": newPositionsArray
+              };
+
+              $.post(
+                "/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val() + "/move",
+                parameters
+              ).done(function(data, statusText) {
+                location.reload();
+              });
+
+              // reorganize
+              /*for (i = 0; i < streamItemsReorg.length; i++) {
+                $(streamItemsReorg[i]).attr('position', i+1);
+              }*/
+            }
+          });
+          $( "#streamitems" ).disableSelection();
         });
       </script>
       <div class="<%= setCols(4) %>">
@@ -89,24 +135,23 @@
           </div>
         </div>
       </div>
-      <table class="table table-bordered table-striped">
+      <table class="table table-bordered table-striped row">
          <thead>
             <tr>
               <th class="col-md-2">Start Time</th>
               <th class="col-md-2">Name</th>
               <th class="col-md-6">Description</th>
               <th class="col-md-2">Actions</th>
-
             </tr>
          </thead>
 
-         <tbody>
+         <tbody id="streamitems">
             <% @streamitems.each do |streamitem| %>
-               <tr>
-                  <td><%= streamitem.start_time.strftime("%I:%M:%S %p") %></td>
-                  <td><%= streamitem.episode.name %></td>
-                  <td><%= streamitem.episode.description %></td>
-                  <td><%= link_to "Remove", admin_streamitem_path(streamitem), method: :delete %></td>
+               <tr position="<%= streamitem.position %>">
+                  <td class="col-md-2"><%= streamitem.start_time.strftime("%I:%M:%S %p") %></td>
+                  <td class="col-md-2"><%= streamitem.episode.name %></td>
+                  <td class="col-md-6"><%= streamitem.episode.description %></td>
+                  <td class="col-md-2"><%= link_to "Remove", admin_streamitem_path(streamitem), method: :delete %></td>
                </tr>
             <% end %>
          </tbody>
