--- a/app/views/admin/streamitems/index.html.erb
+++ b/app/views/admin/streamitems/index.html.erb
@@ -25,31 +25,39 @@
             $("#day option[value='"+ urlArray[7] +"']").prop('selected', true);
           }
         }
+
+        function updateStreamitems(){
+          $.ajax({url: "/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val() + "/ajax", success: function(result){
+            $("#streamitems").html(result);
+            $("#stream-form").show();
+          }});
+        }
+
+        function addEpisode(){
+          window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val() + "/new");
+        }
+
         $(document).ready(function (){
           updateSelects();
           $("#month").change(function() {
             if($("#day").val() != -1){
-              window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
+              //window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
+              updateStreamitems();
             }
             updateDaySelect();
           });
           $("#year").change(function() {
             if($("#day").val() != -1){
-              window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
+              //window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
+              updateStreamitems();
             }
             //updateDaySelect();
           });
           $("#day").change(function() {
-            window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
+            //window.location.replace("/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val());
+            updateStreamitems();
           });
           $( "#streamitems" ).sortable({
-            /*drop: function(event, ui) {
-              console.log(event.target);
-            },
-            receive: function(event, ui) {
-              console.log($(this).data().uiSortable.currentItem.prev());
-              console.log(event.target);
-            },*/
             update: function(event, ui){
               var oldPosition = $(ui.item[0]).attr('position');
               var newPosition;
@@ -76,10 +84,10 @@
 
               $.post(
                 "/admin/streamitems/" + $("#year").val() + "/" + $("#month").val() + "/" + $("#day").val() + "/move",
-                parameters
-              ).done(function(data, statusText) {
-                location.reload();
-              });
+                parameters,
+                function(data, status, xhr) {
+                  updateStreamitems();
+                });
 
               // reorganize
               /*for (i = 0; i < streamItemsReorg.length; i++) {
@@ -119,10 +127,10 @@
         </select>
       </div>
     </div>
-    <% if defined? @streamitems %>
+    <div id="stream-form" style="<% if !(defined? @streamitems) %><%= 'display: none;' %><% end %>">
       <div class="row">
         <div class="<%= setCols(2) %>">
-          <%= link_to(echoGlyphicon("plus") + " Queue An Episode", streamitems_new_path, class: "btn btn-success") %>
+          <button type="button" class="btn btn-success" onclick="addEpisode()"><%= echoGlyphicon("plus") + " Queue An Episode" %></button>
         </div>
         <div class="<%= setCols(2) %>">
           <div class="progressText"><%= @time_available_str %> left</div>
@@ -146,16 +154,9 @@
          </thead>
 
          <tbody id="streamitems">
-            <% @streamitems.each do |streamitem| %>
-               <tr position="<%= streamitem.position %>">
-                  <td class="col-md-2"><%= streamitem.start_time.strftime("%I:%M:%S %p") %></td>
-                  <td class="col-md-2"><%= streamitem.episode.name %></td>
-                  <td class="col-md-6"><%= streamitem.episode.description %></td>
-                  <td class="col-md-2"><%= link_to "Remove", admin_streamitem_path(streamitem), method: :delete %></td>
-               </tr>
-            <% end %>
+
          </tbody>
       </table>
-    <% end %>
+    </div>
   </div>
 </div>
