created json api for stream info; implemented api in ajax requests for livestream admin page

--- a/app/assets/stylesheets/streamitems.scss
+++ b/app/assets/stylesheets/streamitems.scss
@@ -22,7 +22,7 @@ li .active{
   height: 34px;
   margin-bottom: 0px;
 }
-.progressText{
+.progress-text{
   margin-top: 8px;
   text-align: center;
 }
