I honestly don't remember what this was

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,6 +76,7 @@
         <h2 class="section-heading">Contact Us<h2>
       </div>
       <div class="row section-body">
+        <div style="height:400px;"></div>
       </div>
     </div>
   </div>
