--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -33,16 +33,25 @@
   }
   #about{
     .about-item{
-      .img-circular{
-        margin-left: auto;
-        margin-right: auto;
-        width:250px;
-        height:250px;
-        background-image: url(image_path("mic-logo-with-bg.png"));
-        background-position: center;
-        background-size:100% 100%;
-        background-repeat: no-repeat;
-        border-radius: 50%;
+      .img-contain{
+        position:relative;
+        overflow: hidden;
+        padding-bottom: 100%;
+        .img-circular{
+          position: absolute;
+          margin-left: auto;
+          margin-right: auto;
+          min-width:100%;
+          min-height:100%;
+          top:50%;
+          left:50%;
+          transform: translateX(-50%) translateY(-50%);
+          background-image: url(image_path("mic-logo-with-bg.png"));
+          background-position: center;
+          background-size:cover;
+          background-repeat: no-repeat;
+          border-radius: 50%;
+        }
       }
       .banner{
         .banner-text{
@@ -56,12 +65,10 @@
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top:-20px;
-        width:50%;
-        min-width:300px;
+        top:-3em;
         height:100px;
         background-image: url(image_path('banners/red-banner.png'));
-        background-size:300px 75px;
+        background-size:contain;
         background-repeat: no-repeat;
         background-position: center;
       }
@@ -75,7 +82,7 @@
   }
 
   .main-section{
-    padding:0px 100px 0px 100px;
+
     background-color: white;
   }
 }
