--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,21 +51,27 @@
     <!--ABOUT SECTION-->
     <div id="about" class="row main-section">
       <div class="row">
-        <h2 class="section-heading">About Us<h2>
+        <h2 class="section-heading <%=setCols(12)%>">About Us<h2>
       </div>
       <div class="row section-body">
         <div id="mission" class="about-item <%= setCols(4)%>">
-          <div class="img-circular"></div>
+          <div class="img-contain">
+            <div class="img-circular img img-responsive full-width"></div>
+          </div>
           <div class="banner"><h4 class="banner-text">Mission</h4></div>
           <div class="panel-body">Image of some inspiring stuff</div>
         </div>
         <div id="team" class="about-item <%= setCols(4)%>">
-          <div class="img-circular"></div>
+          <div class="img-contain">
+            <div class="img-circular"></div>
+          </div>
           <div class="banner"><h4 class="banner-text">Team</h4></div>
           <div class=""> Image of our current team </div>
         </div>
         <div id="vision" class="about-item <%= setCols(4)%>">
-          <div class="img-circular"></div>
+          <div class="img-contain">
+            <div class="img-circular"></div>
+          </div>
           <div class="banner"><h4 class="banner-text">Vision</h4></div>
           <div class="panel-body"> Image of an eye or something majestic </div>
         </div>
