fixed listen player

--- a/app/views/listen/index.html.erb
+++ b/app/views/listen/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <h2>Now Playing: <% if @currentItem %><%= @currentItem.episode.name %><% else %>Nothing<% end %></h2>
   <audio controls>
-    <source src="http://localhost:8000/livestream" type="audio/mpeg">
+    <source src="http://54.191.141.112:8000/livestream" type="audio/ogg">
   Your browser does not support the audio element.
   </audio>
 </div>
