--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="fluid-container">
-    <!--ABOUT SECTION-->
+    <!--ABOUT SECTION
     <div id="about" class="row main-section">
       <div class="row">
         <h2 class="section-heading <%=setCols(12)%>">About Us<h2>
@@ -75,6 +75,13 @@
           <div class="banner"><h4 class="banner-text">Vision</h4></div>
           <div class="panel-body"> Image of an eye or something majestic </div>
         </div>
+      </div>
+    </div>
+    -->
+    <!-- Announcements -->
+    <div id="announcements" class="row main-section">
+      <div class="row" style="height:200px;">
+        <h2 class="section-heading">Today's Announcements</h2>
       </div>
     </div>
     <div id="join" class="row main-section">
