--- a/app/views/admin/access/index.html.erb
+++ b/app/views/admin/access/index.html.erb
@@ -6,7 +6,7 @@
     <div class="col-lg-3">
       <div id="shows-panel" class="panel panel-default">
         <div class="panel-heading">Manage Shows</div>
-        <div class="panel-body"><%=link_to("Shows","#")%></div>
+        <div class="panel-body"><%=link_to("Shows", admin_shows_path)%></div>
       </div>
     </div>
     <div class="col-lg-3">
