--- a/app/views/admin/episodes/new.html.erb
+++ b/app/views/admin/episodes/new.html.erb
@@ -4,7 +4,7 @@
 <div class="episodes new">
   <h2>Create Episode</h2>
 
-  <%= form_for(@episode, html: { multipart: true }) do |f| %>
+  <%= form_for([:admin, @episode], html: { multipart: true }) do |f| %>
 
     <%= render(:partial => "form", :locals=>{:f=>f})%>
 
