--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -2,7 +2,7 @@
   <li class= "<%= (@page_title=="Home")? "active" : ""%>">
     <%= link_to("Home", home_path)%>
   </li>
-  <li class= "<%= (@page_title=="Episodes")? "active" : ""%>">
+  <li class= "<%= (@page_title=="Shows")? "active" : ""%>">
     <%= link_to("Episodes", admin_episodes_path) %>
   </li>
   <li class="<%= (@page_title=="Livestream")? "active" : ""%>">
