--- a/app/views/admin/access/index.html.erb
+++ b/app/views/admin/access/index.html.erb
@@ -25,7 +25,7 @@
     <div class="col-lg-3">
       <div id="users-panel" class="panel panel-default">
         <div class="panel-heading">Manage Users</div>
-        <div class="panel-body"><%=link_to("Users", users_path)%></div>
+        <div class="panel-body"><%=link_to("Users", admin_users_path)%></div>
       </div>
     </div>
   </div>
