added and implemented a stats class for the livestream

--- a/app/views/admin/streamitems/new.html.erb
+++ b/app/views/admin/streamitems/new.html.erb
@@ -11,7 +11,7 @@
 <div class="container">
    <%= form_for @streamitem, url: {action: "create"} do |f| %>
     <div style="display: none;"><%= f.date_field :date, value: @selected_date.strftime('%Y-%m-%d') %></div>
-    <%= f.collection_select(:episode_id, Admin::Episode.all, :id, :name, {}, {:class=>'form-control'}) %>
+    <%= f.collection_select(:episode_id, Episode.all, :id, :name, {}, {:class=>'form-control'}) %>
     <%= f.submit "Add", class: "btn btn-primary" %>
    <% end %>
 </div>
