created nice add streamitems page and other small fixes

--- a/app/assets/stylesheets/streamitems.scss
+++ b/app/assets/stylesheets/streamitems.scss
@@ -26,3 +26,9 @@ li .active{
   margin-top: 8px;
   text-align: center;
 }
+
+.checkbox{
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  padding-left: 53px;
+}
